--- a/static/pip2/Sequences/Length.html
+++ b/static/pip2/Sequences/Length.html
@@ -606,7 +606,7 @@ two lines of code from above.</p>
             <script>
             $(document).ready(function(){checkRadio('test_question8_4_2');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question8_4_2','b',['Take a look at the index calculation again, len(s)\u002D5.', 'Yes, len(s) is 12 and 12\u002D5 is 7.  Use 7 as index and remember to start counting with 0.', 's is at index 11', 'You subtract 5 before using the index operator so it will work.'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question8_4_2','b',['Take a look at the index calculation again, len(s)-5.', 'Yes, len(s) is 12 and 12-5 is 7.  Use 7 as index and remember to start counting with 0.', 's is at index 11', 'You subtract 5 before using the index operator so it will work.'])">Check Me</button>
             <button class='btn btn-default' id="test_question8_4_2_bcomp" disabled name="compare" onclick="compareAnswers('test_question8_4_2');">Compare Me</button>
             </form><br />
             <div id="test_question8_4_2_feedback">
