--- a/static/pip2/Sequences/ListMembership.html
+++ b/static/pip2/Sequences/ListMembership.html
@@ -410,7 +410,7 @@ else{
             <script>
             $(document).ready(function(){checkRadio('test_question9_4_1');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question9_4_1','a',['Yes, \u0027cat\u0027 is an item in the list alist.', 'There are 5 items in the list, \u0027cat\u0027 is one of them.'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question9_4_1','a',['Yes, 'cat' is an item in the list alist.', 'There are 5 items in the list, 'cat' is one of them.'])">Check Me</button>
             <button class='btn btn-default' id="test_question9_4_1_bcomp" disabled name="compare" onclick="compareAnswers('test_question9_4_1');">Compare Me</button>
             </form><br />
             <div id="test_question9_4_1_feedback">
@@ -434,7 +434,7 @@ else{
             <script>
             $(document).ready(function(){checkRadio('test_question9_4_2');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question9_4_2','b',['\u0022at\u0022 is in \u0022cat\u0022, but it is not in alist', 'Yes, \u0022at\u0022 is not in the top level item, alist.  It is in one of the elements of alist.'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question9_4_2','b',['"at" is in "cat", but it is not in alist', 'Yes, "at" is not in the top level item, alist.  It is in one of the elements of alist.'])">Check Me</button>
             <button class='btn btn-default' id="test_question9_4_2_bcomp" disabled name="compare" onclick="compareAnswers('test_question9_4_2');">Compare Me</button>
             </form><br />
             <div id="test_question9_4_2_feedback">
