--- a/static/pip2/Sequences/tuples.rst\TupleAssignmentwithunpacking.html
+++ b/static/pip2/Sequences/tuples.rst\TupleAssignmentwithunpacking.html
@@ -439,7 +439,7 @@ a parameter list, come back and look at this again.</p>
             <script>
             $(document).ready(function(){checkMultipleSelect('test_questiontuples_2');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMAStorage('test_questiontuples_2','b,c,d',['As soon as the first return statement is executed, the function exits, so the second one will never be executed\u003B only x will be returned', 'return [x,y] is not the preferred method because it returns x and y in a list and you would have to manually unpack the values. But it is workable.', 'return (x, y) returns a tuple.', 'return x, y causes the two values to be packed into a tuple.', 'It is possible, and frequently useful, to have one function compute multiple values.'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMAStorage('test_questiontuples_2','b,c,d',['As soon as the first return statement is executed, the function exits, so the second one will never be executed; only x will be returned', 'return [x,y] is not the preferred method because it returns x and y in a list and you would have to manually unpack the values. But it is workable.', 'return (x, y) returns a tuple.', 'return x, y causes the two values to be packed into a tuple.', 'It is possible, and frequently useful, to have one function compute multiple values.'])">Check Me</button>
             <button class='btn btn-default' id="test_questiontuples_2_bcomp" disabled name="compare" onclick="compareAnswers('test_questiontuples_2');">Compare Me</button>
             </form><br />
             <div id="test_questiontuples_2_feedback">
@@ -467,7 +467,7 @@ a parameter list, come back and look at this again.</p>
             <script>
             $(document).ready(function(){checkRadio('test_questiontuples_3');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_questiontuples_3','b',['Sure you can\u003B you can use any variable on the right\u002Dhand side that already has a value.', 'Once you assign x\u0027s value to y, y\u0027s original value is gone', 'Once you assign x\u0027s value to y, y\u0027s original value is gone'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_questiontuples_3','b',['Sure you can; you can use any variable on the right-hand side that already has a value.', 'Once you assign x's value to y, y's original value is gone', 'Once you assign x's value to y, y's original value is gone'])">Check Me</button>
             <button class='btn btn-default' id="test_questiontuples_3_bcomp" disabled name="compare" onclick="compareAnswers('test_questiontuples_3');">Compare Me</button>
             </form><br />
             <div id="test_questiontuples_3_feedback">
