--- a/static/pip2/Sequences/tuples.rst\TuplePacking.html
+++ b/static/pip2/Sequences/tuples.rst\TuplePacking.html
@@ -327,7 +327,7 @@ have omitted the parentheses when first assigning a tuple to the variable julia.
             <script>
             $(document).ready(function(){checkMultipleSelect('test_questiontuples_1');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMAStorage('test_questiontuples_1','b',['julia is a tuple, not a dictionary\u003B indexes must be integers', '[\u002D1] picks out the last item in the sequence', 'Index into tuples using square brackets. julia(\u002D1) will try to treat julia as a function call, with \u002D1 as the parameter value.', 'Index into tuples using square brackets. julia(\u002D1) will try to treat julia as a function call, with \u002D1 as the parameter value.', 'Indexing starts at 0. You want the seventh item, which is julia[6]'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMAStorage('test_questiontuples_1','b',['julia is a tuple, not a dictionary; indexes must be integers', '[-1] picks out the last item in the sequence', 'Index into tuples using square brackets. julia(-1) will try to treat julia as a function call, with -1 as the parameter value.', 'Index into tuples using square brackets. julia(-1) will try to treat julia as a function call, with -1 as the parameter value.', 'Indexing starts at 0. You want the seventh item, which is julia[6]'])">Check Me</button>
             <button class='btn btn-default' id="test_questiontuples_1_bcomp" disabled name="compare" onclick="compareAnswers('test_questiontuples_1');">Compare Me</button>
             </form><br />
             <div id="test_questiontuples_1_feedback">
